--- a/dmis.html
+++ b/dmis.html
@@ -182,6 +182,14 @@
             </a>
           </li>
           <li>
+            <a
+              href="https://instagram.com/nhel_designs?igshid=MzNlNGNkZWQ4Mg=="
+              target="_blank"
+            >
+              <img src="images/instagram.webp" alt="" />
+            </a>
+          </li>
+          <li>
             <a href="https://dribbble.com/leonelesguerra" target="_blank">
               <img src="images/dribbble.svg" alt="" />
             </a>
