--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
         <div class="img1">
           <li class="js-scroll fade-in-bottom">
             <a
+              href="https://www.behance.net/gallery/175371423/Coin-World-Instagram-Carousel?"
+              target="_blank"
+            >
+              <img src="images/coinworld-carousel.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
               href="https://www.behance.net/gallery/174759129/iTravel-(Travel-Mobile-App)"
               target="_blank"
             >
@@ -144,14 +152,6 @@
               target="_blank"
             >
               <img src="images/warzone.png" alt="" class="zoom" />
-            </a>
-          </li>
-          <li class="js-scroll fade-in-bottom">
-            <a
-              href="https://www.behance.net/gallery/161829513/Coin-World-Cryptocurrency-UIUX-Mockups"
-              target="_blank"
-            >
-              <img src="images/coin-world.png" alt="" class="zoom" />
             </a>
           </li>
 
@@ -332,6 +332,14 @@
           <li>
             <a href="mailto:leonelesguerra63@gmail.com" target="_blank">
               <img src="images/gmail.webp" alt="" />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://instagram.com/nhel_designs?igshid=MzNlNGNkZWQ4Mg=="
+              target="_blank"
+            >
+              <img src="images/instagram.webp" alt="" />
             </a>
           </li>
           <li>
