--- a/index.html
+++ b/index.html
@@ -343,6 +343,11 @@
             </a>
           </li>
           <li>
+            <a href="https://www.threads.net/@nhel_designs" target="_blank">
+              <img src="images/threads.svg" alt="" />
+            </a>
+          </li>
+          <li>
             <a href="https://dribbble.com/leonelesguerra" target="_blank">
               <img src="images/dribbble.svg" alt="" />
             </a>
