--- a/development.html
+++ b/development.html
@@ -126,6 +126,14 @@
             </a>
           </li>
           <li>
+            <a
+              href="https://www.tiktok.com/@uiux_aries?_t=8e56wwNzLKD&_r=1"
+              target="_blank"
+            >
+              <img src="images/tiktok.svg" alt="" />
+            </a>
+          </li>
+          <li>
             <a href="https://github.com/nhel-ez" target="_blank">
               <img src="images/github-white.webp" alt="" />
             </a>
