--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 20px"
           >
-            Web Development
+            Graphic Design
           </p>
           <p class="js-scroll fade-in" style="color: white; font-size: 14px">
-            Web development refers in general to the tasks associated with
-            developing websites for hosting via intranet or internet. The web
-            development process includes web design, web content development,
-            client-side/server-side scripting and network security
-            configuration, among other tasks.
+            Graphic design is a craft where professionals create visual content
+            to communicate messages. By applying visual hierarchy and page
+            layout techniques, designers use typography and pictures to meet
+            users' specific needs and focus on the logic of displaying elements
+            in interactive designs, to optimize the user experience.
             <br />
             <br />
             <br />
