--- a/about.html
+++ b/about.html
@@ -106,6 +106,7 @@
           <div class="img2 js-scroll fade-in">
             <li><img src="images/figma.webp" alt="" /></li>
             <li><img src="images/canva.webp" alt="" /></li>
+            <li><img src="images/photoshop.png" alt="" /></li>
             <li><img src="images/wordpress.png" alt="" /></li>
             <li><img src="images/elementor.png" alt="" /></li>
             <li><img src="images/vscode.webp" alt="" /></li>
@@ -115,6 +116,7 @@
             <li><img src="images/loom.png" alt="" /></li>
             <li><img src="images/slack.png" alt="" /></li>
             <li><img src="images/clickup-logo-gradient.png" alt="" /></li>
+            <li><img src="images/chatgpt.png" alt="" /></li>
           </div>
           <p
             class="js-scroll fade-in"
