--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
           Recent Projects
         </h1>
         <h6 class="sub-text">
-          I recently working in UI/UX design and web development project for a
-          my portfolio. The project involved creating a user-friendly interface
-          and optimizing the website for all devices, resulting in a successful
-          end product that met the client's needs.
+          I recently working in UI/UX design and web development project for my
+          portfolio. The project involved creating a user-friendly interface and
+          optimizing the website for all devices, resulting in a successful end
+          product that met the client's needs.
         </h6>
         <div class="img1">
           <li class="js-scroll fade-in-bottom">
