--- a/index.html
+++ b/index.html
@@ -197,7 +197,15 @@
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 20px"
           >
-            UI Design
+            UI/UX Design
+          </p>
+          <p class="js-scroll fade-in" style="color: white; font-size: 14px">
+            UX Research<br />
+            User Flow<br />
+            Competitor's Analysis<br />
+            Usability Testing<br />
+            Wireframing<br />
+            Interactive Prototypes<br />
           </p>
         </li>
         <li class="card slide js-scroll fade-in-bottom">
@@ -205,7 +213,15 @@
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 20px"
           >
-            UX Design
+            Web Development/Funnel Building
+          </p>
+          <p class="js-scroll fade-in" style="color: white; font-size: 14px">
+            WordPress Design and Development<br />
+            Content Management System(CMS)<br />
+            Funnel Building<br />
+            <br />
+            <br />
+            <br />
           </p>
         </li>
         <li class="card slide js-scroll fade-in-bottom">
@@ -214,6 +230,14 @@
             style="color: white; font-weight: 700; margin-bottom: 20px"
           >
             Graphic Design
+          </p>
+          <p class="js-scroll fade-in" style="color: white; font-size: 14px">
+            Branding<br />
+            Logo<br />
+            Thumbnail<br />
+            Posters and Banner<br />
+            Carousel<br />
+            <br />
           </p>
         </li>
       </center>
