--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           </p>
           <p class="js-scroll fade-in" style="color: white; font-size: 14px">
             WordPress Design and Development<br />
-            Content Management System(CMS)<br />
+            CMS Website Development<br />
             Funnel Building<br />
             <br />
             <br />
