--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
             Web Development/Funnel Building
           </p>
           <p class="js-scroll fade-in" style="color: white; font-size: 14px">
-            WordPress Design and Development<br />
-            CMS Website Development<br />
+            WordPress Design<br />
+            WordPress Development<br />
+            CMS Web Development<br />
             Funnel Building<br />
-            <br />
             <br />
             <br />
           </p>
