--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 20px"
           >
-            Web Development/Funnel Building
+            Web Development
           </p>
           <p class="js-scroll fade-in" style="color: white; font-size: 14px">
             WordPress Design<br />
