--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </h1>
         <h6 class="sub-text">
           I recently working in UI/UX design and web development project for my
-          portfolio. The project involved creating a user-friendly interface and
+          portfolio.<br />The project involved creating a user-friendly interface and
           optimizing the website for all devices, resulting in a successful end
           product that met the client's needs.
         </h6>
@@ -179,7 +179,7 @@
         </h1>
         <h6 class="sub-text">
           UI/UX design and web development are crucial components in creating a
-          successful online presence. An optimal balance between a visually
+          successful online presence.<br />An optimal balance between a visually
           appealing user interface and robust web development ensures an
           excellent user experience, which in turn drives traffic and increases
           conversion rates.
@@ -258,7 +258,7 @@
         </h1>
         <h6 class="sub-text">
           Projects in UI/UX design and web development can vary widely in scope
-          and complexity, from simple landing pages to complex web applications.
+          and complexity, from simple landing pages to complex web applications.<br />
           The success of a project often hinges on close collaboration between
           designers, developers, and stakeholders, as well as an iterative
           design process that incorporates user feedback and testing.
