--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <span class="gradient-text">reality!</span>
             </h1>
             <p>
-              I can help you with UI design, UX design, UX research, Wordpress
+              I can help you with UI design, UX design,<br />UX research, Wordpress
               design, game design, and web development.
             </p>
             <div class="cta slide js-scroll fade-in">
@@ -118,7 +118,7 @@
         <h6 class="sub-text">
           I recently working in UI/UX design and web development project for my
           portfolio.<br />The project involved creating a user-friendly interface and
-          optimizing the website for all devices, resulting in a successful end
+          optimizing the website for<br />all devices, resulting in a successful end
           product that met the client's needs.
         </h6>
         <div class="img1">
@@ -180,7 +180,7 @@
         <h6 class="sub-text">
           UI/UX design and web development are crucial components in creating a
           successful online presence.<br />An optimal balance between a visually
-          appealing user interface and robust web development ensures an
+          appealing user interface and robust web development<br />ensures an
           excellent user experience, which in turn drives traffic and increases
           conversion rates.
         </h6>
@@ -260,7 +260,7 @@
           Projects in UI/UX design and web development can vary widely in scope
           and complexity, from simple landing pages to complex web applications.<br />
           The success of a project often hinges on close collaboration between
-          designers, developers, and stakeholders, as well as an iterative
+          designers, developers, and<br />stakeholders, as well as an iterative
           design process that incorporates user feedback and testing.
         </h6>
       </center>
