--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <span class="gradient-text">reality!</span>
             </h1>
             <p>
-              I can help you with UI design, UX design,<br />UX research, Wordpress
+              I can help you with UI design, UX design, UX research,<br />Wordpress
               design, game design, and web development.
             </p>
             <div class="cta slide js-scroll fade-in">
@@ -260,7 +260,7 @@
           Projects in UI/UX design and web development can vary widely in scope
           and complexity, from simple landing pages to complex web applications.<br />
           The success of a project often hinges on close collaboration between
-          designers, developers, and<br />stakeholders, as well as an iterative
+          designers, developers, and stakeholders, as<br />well as an iterative
           design process that incorporates user feedback and testing.
         </h6>
       </center>
