--- a/designs.html
+++ b/designs.html
@@ -67,6 +67,30 @@
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
             <a
+              href="https://www.behance.net/gallery/183707641/Levision-(Streaming-Tools-Saas-Web-Design)"
+              target="_blank"
+            >
+              <img src="images/icor ethereum - floating mockup - dribble shot.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
+              href="https://www.behance.net/gallery/183707641/Levision-(Streaming-Tools-Saas-Web-Design)"
+              target="_blank"
+            >
+              <img src="images/levision - floating mockup - dribble shot.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
+              href="https://www.behance.net/gallery/178000565/Anima-NFT"
+              target="_blank"
+            >
+              <img src="images/Anima NFT.png" alt="" class="zoom" />
+            </a>
+          </li>
+          <li class="js-scroll fade-in-bottom">
+            <a
               href="https://www.behance.net/gallery/175371423/Coin-World-Instagram-Carousel?"
               target="_blank"
             >
