--- a/index.html
+++ b/index.html
@@ -124,28 +124,27 @@
         <div class="img1">
           <li class="js-scroll fade-in-bottom">
             <a
-              href="https://www.behance.net/gallery/175371423/Coin-World-Instagram-Carousel?"
+              href="https://www.behance.net/gallery/183707641/Levision-(Streaming-Tools-Saas-Web-Design)"
               target="_blank"
             >
-              <img src="images/coinworld-carousel.png" alt="" class="zoom" />
+              <img src="images/icor ethereum - floating mockup - dribble shot.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
             <a
-              href="https://www.behance.net/gallery/174759129/iTravel-(Travel-Mobile-App)"
+              href="https://www.behance.net/gallery/183707641/Levision-(Streaming-Tools-Saas-Web-Design)"
               target="_blank"
             >
-              <img src="images/iTravel.png" alt="" class="zoom" />
+              <img src="images/levision - floating mockup - dribble shot.png" alt="" class="zoom" />
             </a>
           </li>
           <li class="js-scroll fade-in-bottom">
             <a
-              href="https://www.behance.net/gallery/166279041/iDMIS-Document-Managemet-Information-System?"
+              href="https://www.behance.net/gallery/178000565/Anima-NFT"
               target="_blank"
             >
-              <img src="images/idmis.png" alt="" class="zoom" />
+              <img src="images/Anima NFT.png" alt="" class="zoom" />
             </a>
-        
           </li>
           <div class="slide js-scroll fade-in" style="margin-top: 40px">
             <a href="show-case.html" style="text-decoration: none">
