--- a/designs.html
+++ b/designs.html
@@ -67,7 +67,7 @@
         <div class="img1 slide">
           <li class="js-scroll fade-in-bottom">
             <a
-              href="https://www.behance.net/gallery/183707641/Levision-(Streaming-Tools-Saas-Web-Design)"
+              href="https://www.behance.net/gallery/183909981/Icor-Ethereum-(Cryptocurrency-Platform)"
               target="_blank"
             >
               <img src="images/icor ethereum - floating mockup - dribble shot.png" alt="" class="zoom" />
