--- a/index.html
+++ b/index.html
@@ -302,36 +302,74 @@
         </li>
       </center>
       <center>
-        <!-- Slideshow container -->
-<div class="slideshow-container">
-
-  <!-- Full-width slides/quotes -->
-  <div class="mySlides">
-    <q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
-    <p class="author">- John Keats</p>
-  </div>
-
-  <div class="mySlides">
-    <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
-    <p class="author">- Ernest Hemingway</p>
-  </div>
-
-  <div class="mySlides">
-    <q>I have not failed. I've just found 10,000 ways that won't work.</q>
-    <p class="author">- Thomas A. Edison</p>
-  </div>
-
-  <!-- Next/prev buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-
-<!-- Dots/bullets/indicators -->
-<div class="dot-container">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
+        <center>
+          <h1
+            style="
+              color: white;
+              font-size: 40px;
+              font-weight: bold;
+              margin-bottom: 50px;
+            "
+          >
+            Testimonials
+          </h1>
+          <h6 class="sub-text">
+            Clients consistently commend my proficiency in translating complex ideas into<br />visually captivating and functionally seamless digital experiences.
+          </h6>
+        </center>
+        <li class="card slide js-scroll fade-in-bottom">
+          <p
+            class="js-scroll fade-in"
+            style="color: white; font-weight: 700; margin-bottom: 30px"
+          >
+            Arun Karthik - CEO of Design Qube
+          </p>
+          <p class="js-scroll fade-in" style="color: white; font-size: 14px">
+            "I had the pleasure of working with Leo on a recent project, and I must say his UI/UX design services are nothing short of exceptional. Leo possesses a rare combination of creativity and technical expertise. He not only understood our vision but also translated it into a visually stunning and user-friendly interface. His attention to detail and commitment to delivering a top-notch user experience sets him apart. Working with Leo was a breeze, and the results exceeded our expectations. I highly recommend Leo for anyone seeking a UI/UX designer who can elevate their digital presence."
+          </p>
+        </li>
+        <li class="card slide js-scroll fade-in-bottom">
+          <p
+            class="js-scroll fade-in"
+            style="color: white; font-weight: 700; margin-bottom: 30px"
+          >
+            Isabel Reyes - CEO of Daily Social Studio
+          </p>
+          <p class="js-scroll fade-in" style="color: white; font-size: 14px">
+            "As a startup founder, finding a UI/UX designer like Leo was a game-changer for us. Leo's ability to understand our brand and user needs allowed him to create a design that not only looks fantastic but also enhances the overall user experience. He was responsive, collaborative, and consistently delivered high-quality work within our tight timelines. Leo's design sensibility and attention to user flow have undoubtedly contributed to the positive feedback we've received from our users. If you're looking for a talented UI/UX designer who can bring your vision to life, Leo is the person you need."
+          </p>
+        </li>
+        <li class="card slide js-scroll fade-in-bottom">
+          <p
+            class="js-scroll fade-in"
+            style="color: white; font-weight: 700; margin-bottom: 30px"
+          >
+            James Marburg - CEO of Bad Bakery PTY LTD
+          </p>
+          <p class="js-scroll fade-in" style="color: white; font-size: 14px">
+            "Leo's UI/UX design services have been integral to the success of our digital platform. His innovative approach and keen understanding of user behavior resulted in a design that not only looks beautiful but also functions seamlessly. Leo is a true professional, always open to feedback and quick to implement changes. His commitment to delivering a user-centric design is evident in every aspect of his work. Working with Leo was a pleasure, and I would highly recommend him to anyone looking for a skilled and reliable UI/UX designer."
+          </p>
+        </li>
+        <li class="card slide js-scroll fade-in-bottom">
+          <p
+            class="js-scroll fade-in"
+            style="color: white; font-weight: 700; margin-bottom: 30px"
+          >
+            Lucas Spinella - CEO of Courses And Funnels
+          </p>
+          <p class="js-scroll fade-in" style="color: white; font-size: 14px">
+            "Working with Leo on our web design and funnel building projects has been nothing short of exceptional. His attention to detail and creative approach have transformed our online presence. The sleek and user-friendly design of our website has not only enhanced the user experience but has also significantly increased our conversion rates. Leo's expertise and commitment to delivering high-quality results make him a trusted partner for anyone seeking top-notch web design and funnel solutions."
+        </li>
+        <li class="card slide js-scroll fade-in-bottom">
+          <p
+            class="js-scroll fade-in"
+            style="color: white; font-weight: 700; margin-bottom: 30px"
+          >
+            Loreto Novicio - Director of DOST - FPRDI
+          </p>
+          <p class="js-scroll fade-in" style="color: white; font-size: 14px">
+            "I had the pleasure of having Leo as a Front-End Development Intern, and I must say, his skills and dedication were exceptional. Leo demonstrated a strong understanding of modern web development technologies and consistently delivered high-quality code. His ability to collaborate with the team and adapt to new challenges made a significant impact on our projects. Leo's internship was truly a valuable asset to our front-end development team."
+        </li>
       </center>
     </div>
 
