--- a/index.html
+++ b/index.html
@@ -300,6 +300,14 @@
             </a>
           </div>
         </li>
+        <div
+      style="
+        border: 1px solid white;
+        margin-top: 100px;
+        margin-bottom: 80px;
+        opacity: 40%;
+      "
+    ></div>
       </center>
       <center>
         <center>
