--- a/index.html
+++ b/index.html
@@ -358,6 +358,10 @@
           <p class="js-scroll fade-in" style="color: white; font-size: 14px">
             "Working with Leo on our web design and funnel building projects has been nothing short of exceptional. His attention to detail and creative approach have transformed our online presence. The sleek and user-friendly design of our website has not only enhanced the user experience but has also significantly increased our conversion rates. Leo's expertise and commitment to delivering high-quality results make him a trusted partner for anyone seeking top-notch web design and funnel solutions."
         </li>
+      </center>
+    </div>
+    <div>
+      <center>
         <li class="card slide js-scroll fade-in-bottom">
           <p
             class="js-scroll fade-in"
