--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
           conversion rates.
         </h6>
         <li class="card slide js-scroll fade-in-bottom">
+          <div></div>
+          <div></div>
+          <div></div>
           <p
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 30px"
