--- a/index.html
+++ b/index.html
@@ -333,7 +333,19 @@
             Arun Karthik<br>CEO of Design Qube
           </p>
           <p class="js-scroll fade-in" style="color: white; font-size: 14px">
-            "I had the pleasure of working with Leo on a recent project, and I must say his UI/UX design services are nothing short of exceptional. Leo possesses a rare combination of creativity and technical expertise. He not only understood our vision but also translated it into a visually stunning and user-friendly interface. His attention to detail and commitment to delivering a top-notch user experience sets him apart. Working with Leo was a breeze, and the results exceeded our expectations. I highly recommend Leo for anyone seeking a UI/UX designer who can elevate their digital presence."
+            "I had the pleasure of working with Leo on a<br />
+            recent project, and I must say his UI/UX design<br />
+            services are nothing short of exceptional. Leo<br />
+            possesses a rare combination of creativity and<br />
+            technical expertise. He not only understood our<br />
+            vision but also translated it into a visually<br />
+            stunning and user-friendly interface. His attention<br />
+            to detail and commitment to delivering a top-<br />
+            notch user experience sets him apart. Working<br />
+            with Leo was a breeze, and the results exceeded<br />
+            our expectations. I highly recommend Leo for<br />
+            anyone seeking a UI/UX designer who can<br />
+            elevate their digital presence."
           </p>
         </li>
         <li class="card slide js-scroll fade-in-bottom">
@@ -344,7 +356,18 @@
             James Marburg<br>CEO of Bad Bakery PTY LTD
           </p>
           <p class="js-scroll fade-in" style="color: white; font-size: 14px">
-            "Leo's UI/UX design services have been integral to the success of our digital platform. His innovative approach and keen understanding of user behavior resulted in a design that not only looks beautiful but also functions seamlessly. Leo is a true professional, always open to feedback and quick to implement changes. His commitment to delivering a user-centric design is evident in every aspect of his work. Working with Leo was a pleasure, and I would highly recommend him to anyone looking for a skilled and reliable UI/UX designer."
+            "Leo's UI/UX design services have been integral<br />
+            to the success of our digital platform. His<br />
+            innovative approach and keen understanding of<br />
+            user behavior resulted in a design that not only<br />
+            looks beautiful but also functions seamlessly.<br />
+            Leo is a true professional, always open to<br />
+            feedback and quick to implement changes. His<br />
+            commitment to delivering a user-centric design<br />
+            is evident in every aspect of his work. Working<br />
+            with Leo was a pleasure, and I would highly<br />
+            recommend him to anyone looking for a skilled<br />
+            and reliable UI/UX designer."
           </p>
         </li>
         <li class="card slide js-scroll fade-in-bottom">
@@ -355,7 +378,17 @@
             Lucas Spinella<br>CEO of Courses And Funnels
           </p>
           <p class="js-scroll fade-in" style="color: white; font-size: 14px">
-            "Working with Leo on our web design and funnel building projects has been nothing short of exceptional. His attention to detail and creative approach have transformed our online presence. The sleek and user-friendly design of our website has not only enhanced the user experience but has also significantly increased our conversion rates. Leo's expertise and commitment to delivering high-quality results make him a trusted partner for anyone seeking top-notch web design and funnel solutions."
+            "Working with Leo on our web design and funnel<br />
+            building projects has been nothing short of<br />
+            exceptional. His attention to detail and creative<br />
+            approach have transformed our online presence.<br />
+            The sleek and user-friendly design of our website<br />
+            has not only enhanced the user experience but<br />
+            has also significantly increased our conversion<br />
+            rates. Leo's expertise and commitment to<br />
+            delivering high-quality results make him a<br />
+            trusted partner for anyone seeking top-notch<br />
+            web design and funnel solutions."
         </li>
     </div>
     <div>
@@ -367,7 +400,19 @@
             Isabel Reyes<br>CEO of Daily Social Studio
           </p>
           <p class="js-scroll fade-in" style="color: white; font-size: 14px">
-            "As a startup founder, finding a UI/UX designer like Leo was a game-changer for us. Leo's ability to understand our brand and user needs allowed him to create a design that not only looks fantastic but also enhances the overall user experience. He was responsive, collaborative, and consistently delivered high-quality work within our tight timelines. Leo's design sensibility and attention to user flow have undoubtedly contributed to the positive feedback we've received from our users. If you're looking for a talented UI/UX designer who can bring your vision to life, Leo is the person you need."
+            "As a startup founder, finding a UI/UX designer<br />
+            like Leo was a game-changer for us. Leo's ability<br />
+            to understand our brand and user needs allowed<br />
+            him to create a design that not only looks<br />
+            fantastic but also enhances the overall user<br />
+            experience. He was responsive, collaborative, and<br />
+            consistently delivered high-quality work within<br />
+            our tight timelines. Leo's design sensibility and<br />
+            attention to user flow have undoubtedly<br />
+            contributed to the positive feedback we've<br />
+            received from our users. If you're looking for a<br />
+            talented UI/UX designer who can bring your<br />
+            vision to life, Leo is the person you need."
           </p>
         </li>
         <li class="card slide js-scroll fade-in-bottom">
@@ -378,7 +423,16 @@
             Loreto Novicio<br>Director of DOST - FPRDI
           </p>
           <p class="js-scroll fade-in" style="color: white; font-size: 14px">
-            "I had the pleasure of having Leo as a Front-End Development Intern, and I must say, his skills and dedication were exceptional. Leo demonstrated a strong understanding of modern web development technologies and consistently delivered high-quality code. His ability to collaborate with the team and adapt to new challenges made a significant impact on our projects. Leo's internship was truly a valuable asset to our front-end development team."
+            "I had the pleasure of having Leo as a Front-End<br />
+            Development Intern, and I must say, his skills<br />
+            and dedication were exceptional. Leo<br />
+            demonstrated a strong understanding of modern<br />
+            web development technologies and consistently<br />
+            delivered high-quality code. His ability to<br />
+            collaborate with the team and adapt to new<br />
+            challenges made a significant impact on our<br />
+            projects. Leo's internship was truly a valuable<br />
+            asset to our front-end development team."
         </li>
     </div>
   </center>
