--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         </h6>
       </center>
       <center>
-        <li class="card slide js-scroll fade-in-bottom">
+        <li class="card slide js-scroll fade-in-bottom" style="padding-top: 40px;">
           <img
             src="images/Design.svg"
             style="width: 150px; height: 150px"
@@ -276,7 +276,7 @@
             </a>
           </div>
         </li>
-        <li class="card slide js-scroll fade-in-bottom">
+        <li class="card slide js-scroll fade-in-bottom" style="padding-top: 40px;">
           <img
             src="images/Codes.svg"
             style="width: 150px; height: 150px"
@@ -288,7 +288,7 @@
             </a>
           </div>
         </li>
-        <li class="card slide js-scroll fade-in-bottom">
+        <li class="card slide js-scroll fade-in-bottom" style="padding-top: 40px;">
           <img
             src="images/open-book.png"
             style="width: 150px; height: 150px"
