--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             Clients consistently commend my proficiency in translating complex ideas into<br />visually captivating and functionally seamless digital experiences.
           </h6>
       
-        <li class="card slide js-scroll fade-in-bottom">
+        <li class="card slide js-scroll fade-in-bottom" style="padding-top: 50px;">
           <p
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 30px"
@@ -348,7 +348,7 @@
             elevate their digital presence."
           </p>
         </li>
-        <li class="card slide js-scroll fade-in-bottom">
+        <li class="card slide js-scroll fade-in-bottom" style="padding-top: 50px;">
           <p
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 30px"
@@ -371,7 +371,7 @@
             <br />
           </p>
         </li>
-        <li class="card slide js-scroll fade-in-bottom">
+        <li class="card slide js-scroll fade-in-bottom" style="padding-top: 50px;">
           <p
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 30px"
@@ -394,7 +394,7 @@
         </li>
     </div>
     <div>
-        <li class="card slide js-scroll fade-in-bottom">
+        <li class="card slide js-scroll fade-in-bottom" style="padding-top: 50px;">
           <p
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 30px"
@@ -417,7 +417,7 @@
             vision to life, Leo is the person you need."
           </p>
         </li>
-        <li class="card slide js-scroll fade-in-bottom">
+        <li class="card slide js-scroll fade-in-bottom" style="padding-top: 50px;">
           <p
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 30px"
