--- a/index.html
+++ b/index.html
@@ -300,7 +300,10 @@
             </a>
           </div>
         </li>
-        <div
+      </center>
+    </div>
+    
+      <div
       style="
         border: 1px solid white;
         margin-top: 100px;
@@ -308,9 +311,9 @@
         opacity: 40%;
       "
     ></div>
-      </center>
-      <center>
+
       <div>
+        <center>
           <h1
             style="
               color: white;
@@ -324,7 +327,8 @@
           <h6 class="sub-text">
             Clients consistently commend my proficiency in translating complex ideas into<br />visually captivating and functionally seamless digital experiences.
           </h6>
-      
+        </center>
+        <center>
         <li class="card slide js-scroll fade-in-bottom" style="padding-top: 50px;">
           <p
             class="js-scroll fade-in"
@@ -438,8 +442,8 @@
             <br />
             <br />
         </li>
+      </center>
     </div>
-  </center>
 
     <div
       style="
