--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         </li>
       </center>
     </div>
-    
+
       <div
       style="
         border: 1px solid white;
@@ -329,6 +329,7 @@
           </h6>
         </center>
         <center>
+        <div>
         <li class="card slide js-scroll fade-in-bottom" style="padding-top: 50px;">
           <p
             class="js-scroll fade-in"
@@ -442,8 +443,9 @@
             <br />
             <br />
         </li>
-      </center>
     </div>
+  </center>
+  </div>
 
     <div
       style="
