--- a/index.html
+++ b/index.html
@@ -395,6 +395,8 @@
             web design and funnel solutions."
             <br />
         </li>
+        </div>
+        <div>
         <li class="card slide js-scroll fade-in-bottom" style="padding-top: 50px;">
           <p
             class="js-scroll fade-in"
