--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
             elevate their digital presence."
           </p>
         </li>
+
         <li class="card slide js-scroll fade-in-bottom" style="padding-top: 50px;">
           <p
             class="js-scroll fade-in"
@@ -374,7 +375,14 @@
             <br />
           </p>
         </li>
+
         <li class="card slide js-scroll fade-in-bottom" style="padding-top: 50px;">
+          <p
+            class="js-scroll fade-in"
+            style="color: white; font-weight: 700; margin-bottom: 30px"
+          >
+            Lucas Spinella<br>CEO of Courses And Funnels
+          </p>
           <p
             class="js-scroll fade-in"
             style="color: white; font-weight: 700; margin-bottom: 30px"
@@ -394,8 +402,10 @@
             trusted partner for anyone seeking top-notch<br />
             web design and funnel solutions."
             <br />
+          </p>
         </li>
         </div>
+
         <div>
         <li class="card slide js-scroll fade-in-bottom" style="padding-top: 50px;">
           <p
@@ -440,6 +450,7 @@
             asset to our front-end development team."
             <br />
             <br />
+          </p>
         </li>
       </div>
   </center>
