--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
       "
     ></div>
 
+    <div>
     <center>
         <h1
           style="
@@ -326,7 +327,8 @@
         <h6 class="sub-text">
             Clients consistently commend my proficiency in translating complex ideas into<br />visually captivating and functionally seamless digital experiences.
         </h6>
-        <li>
+        </center>
+        <center>
       <div>
         <li class="card slide js-scroll fade-in-bottom" style="padding-top: 50px;">
           <p
@@ -399,9 +401,8 @@
           </p>
         </li>
         </div>
-      </li>
-
-      <li>
+  </center>
+  <center>
         <div>
         <li class="card slide js-scroll fade-in-bottom" style="padding-top: 50px;">
           <p
@@ -449,7 +450,6 @@
           </p>
         </li>
       </div>
-    </li>
   </center>
 
     <div
